--- a/app/style.css
+++ b/app/style.css
@@ -3,12 +3,12 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
 }
 
 /* Handle */
@@ -49,9 +49,16 @@
 }
 
 *::-ms-scrollbar-thumb {
-  background-color: #888;
+  background-color: transparent;
 }
 
 *::-ms-scrollbar-thumb:hover {
   background-color: #555;
+}
+
+@media screen and (max-width:768px) {
+  .max-md\:hidden {
+    display: none;
+  }
+  
 }
